--- a/webapi/src/MccSoft.TemplateApp.Http/template/Client.Class.GetOperations.Documentation.liquid
+++ b/webapi/src/MccSoft.TemplateApp.Http/template/Client.Class.GetOperations.Documentation.liquid
@@ -1,13 +1,13 @@
-{% if operation.HasSummary -%}
+{%- if operation.HasSummary -%}
     /// <summary>{{ operation.Summary | csharpdocs }}</summary>
-{% endif -%}
-{% if operation.HasResultDescription -%}
+{%- endif -%}
+{%- if operation.HasResultDescription -%}
     /// <returns>{{ operation.ResultDescription | csharpdocs }}</returns>
-{% endif -%}
+{%- endif -%}
 /// <exception cref="{{ ExceptionClass }}">A server side error occurred.</exception>
-{% for exception in operation.ExceptionDescriptions -%}
+{%- for exception in operation.ExceptionDescriptions -%}
     /// <exception cref="{{ exception.Type }}">{{ exception.Description }}</exception>
-{% endfor -%}
-{% if operation.IsDeprecated -%}
+{%- endfor -%}
+{%- if operation.IsDeprecated -%}
     [System.Obsolete]
-{% endif -%}
+{%- endif -%}
