--- a/webapi/src/MccSoft.TemplateApp.Http/template/Client.Class.GetOperations.Methods.liquid
+++ b/webapi/src/MccSoft.TemplateApp.Http/template/Client.Class.GetOperations.Methods.liquid
@@ -1,16 +1,20 @@
 {% for operation in Operations -%}
 {% if operation.HttpMethodUpper == 'Get' -%}
-{% if GenerateOptionalParameters == false %}
+{% if operation.Parameters.size > 0 -%}
+{% if GenerateOptionalParameters == false -%}
 {% template Client.Classs.GetOperations.Documentation %}
-{{ operation.MethodAccessModifier }} {{ operation.ResultType }} {{ operation.ActualOperationName }}Async({{ Class }}{{ operation.ActualOperationName }}ParametersDto parameters)
-{
-    return {{ operation.ActualOperationName }}Async(parameters, System.Threading.CancellationToken.None);
-}
+    {{ operation.MethodAccessModifier }} {{ operation.ResultType }} {{ operation.ActualOperationName }}Async({{ Class }}{{ operation.ActualOperationName }}ParametersDto parameters)
+    {
+        return {{ operation.ActualOperationName }}Async(parameters, System.Threading.CancellationToken.None);
+    }
+
 {% endif -%}
-{% template Client.Classs.GetOperations.Documentation %}
-{{ operation.MethodAccessModifier }} {{ operation.ResultType }} {{ operation.ActualOperationName }}Async({{ Class }}{{ operation.ActualOperationName }}ParametersDto parameters, System.Threading.CancellationToken cancellationToken{% if GenerateOptionalParameters %} = default(System.Threading.CancellationToken){% endif %})
-{
-    return {{ operation.ActualOperationName }}Async({% for parameter in operation.Parameters %}parameters.{{ parameter.VariableName }}, {%   endfor   -%} cancellationToken);
-}
+    {% template Client.Classs.GetOperations.Documentation %}
+    {{ operation.MethodAccessModifier }} {{ operation.ResultType }} {{ operation.ActualOperationName }}Async({{ Class }}{{ operation.ActualOperationName }}ParametersDto parameters, System.Threading.CancellationToken cancellationToken{% if GenerateOptionalParameters %} = default(System.Threading.CancellationToken){% endif %})
+    {
+        return {{ operation.ActualOperationName }}Async({% for parameter in operation.Parameters %}parameters.{{ parameter.VariableName }}, {%   endfor   -%} cancellationToken);
+    }
+
+{% endif -%}
 {% endif -%}
 {% endfor -%}
