Fix CSharp client generation (documentation)

--- a/webapi/src/MccSoft.TemplateApp.Http/template/Client.Class.GetOperations.Methods.liquid
+++ b/webapi/src/MccSoft.TemplateApp.Http/template/Client.Class.GetOperations.Methods.liquid
@@ -2,14 +2,14 @@
 {% if operation.HttpMethodUpper == 'Get' -%}
 {% if operation.Parameters.size > 0 -%}
 {% if GenerateOptionalParameters == false -%}
-{% template Client.Classs.GetOperations.Documentation %}
+{% template Client.Class.GetOperations.Documentation %}
 {{ operation.MethodAccessModifier }} {{ operation.ResultType }} {{ operation.ActualOperationName }}Async({{ Class }}{{ operation.ActualOperationName }}ParametersDto parameters)
 {
     return {{ operation.ActualOperationName }}Async(parameters, System.Threading.CancellationToken.None);
 }
 
 {% endif -%}
-{% template Client.Classs.GetOperations.Documentation %}
+{% template Client.Class.GetOperations.Documentation %}
 {{ operation.MethodAccessModifier }} {{ operation.ResultType }} {{ operation.ActualOperationName }}Async({{ Class }}{{ operation.ActualOperationName }}ParametersDto parameters, System.Threading.CancellationToken cancellationToken{% if GenerateOptionalParameters %} = default(System.Threading.CancellationToken){% endif %})
 {
     return {{ operation.ActualOperationName }}Async({% for parameter in operation.Parameters %}parameters.{{ parameter.VariableName }}, {%   endfor   -%} cancellationToken);
