--- a/frontend/src/razor.scss
+++ b/frontend/src/razor.scss
@@ -1,2 +1,5 @@
-@import './styles/variables';
 @import './styles/base';
+@import './index';
+@import './components/uikit/Field.module';
+@import './components/uikit/inputs/Input.module';
+@import './components/uikit/buttons/Button.module';
