--- a/webapi/src/MccSoft.TemplateApp.App/Areas/Identity/Pages/Account/Login.cshtml
+++ b/webapi/src/MccSoft.TemplateApp.App/Areas/Identity/Pages/Account/Login.cshtml
@@ -53,7 +53,7 @@
 
         <div class="social-buttons-container">
           <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal social-login-form">
-            <button type="submit" class="button default-button content-button" name="provider" value="OpenIdConnect" title="Log in using your Google account">Google</button>
+            <button type="submit" class="button default-button content-button" name="provider" value="Google" title="Log in using your Google account">Google</button>
             @* <div> *@
             @*   @foreach (var provider in Model.ExternalLogins) *@
             @*   { *@
