--- a/frontend/src/styles/variables.scss
+++ b/frontend/src/styles/variables.scss
@@ -40,3 +40,6 @@ $form-input-height: 40px;
 $errorTextMarginBottom: 14px;
 
 $shrinkCalendarCellWidth: 50px;
+$separator: #e6e8e6;
+$close-button-hover: #a5aaa5;
+$close-button-active: #9ba09b;
