add `endAdornment` to Input

--- a/frontend/src/components/uikit/inputs/Input.module.scss
+++ b/frontend/src/components/uikit/inputs/Input.module.scss
@@ -18,7 +18,8 @@
 }
 .passwordEye {
   position: absolute;
-  right: 6px;
+  right: 12px;
+  width: 16px;
   top: 0;
   height: $form-input-height;
   display: flex;
