Get rid of FluentUI #29 (DropDownInput reworked)

--- a/frontend/src/components/uikit/inputs/Input.module.scss
+++ b/frontend/src/components/uikit/inputs/Input.module.scss
@@ -27,3 +27,14 @@
   align-items: center;
   @extend .none-select;
 }
+
+.input-with-adornment {
+  padding-right: $input-padding + 16;
+}
+
+.non-form-input {
+  height: $normal-input-height;
+}
+.non-form-input + .passwordEye {
+  height: $normal-input-height;
+}
