--- a/frontend/src/styles/variables.scss
+++ b/frontend/src/styles/variables.scss
@@ -36,6 +36,7 @@ $font-family: Roboto, Sans-Serif;
 
 $normal-input-height: 32px;
 $form-input-height: 40px;
+$input-padding: 12px;
 
 $errorTextMarginBottom: 14px;
 
