--- a/frontend/src/components/uikit/inputs/Input.module.scss
+++ b/frontend/src/components/uikit/inputs/Input.module.scss
@@ -14,6 +14,7 @@
   @extend .base-input;
 }
 .inputContainer {
+  // required for proper displaying of endAdornment
   position: relative;
 }
 .passwordEye {
