--- a/frontend/src/components/uikit/modal/CustomModal.module.scss
+++ b/frontend/src/components/uikit/modal/CustomModal.module.scss
@@ -8,9 +8,8 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  height: 78px;
-  padding-left: 24px;
-  padding-right: 24px;
+  line-height: 28px;
+  padding: 24px;
   border-bottom: 1px $separator solid;
 }
 
@@ -25,11 +24,15 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  padding: 20px 24px;
+  padding: 20px 24px !important;
+  min-width: 400px;
+  max-width: 80%;
 }
 
 .closeButton {
   cursor: pointer;
+  padding-right: 4px;
+  padding-left: 28px;
 }
 
 .closeButton:hover path {
@@ -44,4 +47,8 @@
   display: flex;
   justify-content: flex-end;
   gap: 12px;
+  margin-top: 32px;
+}
+
+.body {
 }
