--- a/frontend/src/components/uikit/modal/CustomModal.module.scss
+++ b/frontend/src/components/uikit/modal/CustomModal.module.scss
@@ -26,7 +26,7 @@
   justify-content: space-between;
   padding: 20px 24px !important;
   min-width: 400px;
-  max-width: 80%;
+  max-width: 80vw;
 }
 
 .closeButton {
