--- a/frontend/src/components/uikit/inputs/dropdown/StyledAutocomplete.module.scss
+++ b/frontend/src/components/uikit/inputs/dropdown/StyledAutocomplete.module.scss
@@ -22,6 +22,9 @@
   padding: 0;
   height: $form-input-height;
 }
+.non-editable-input {
+  cursor: pointer;
+}
 
 .option-value:hover {
   background: $background-input-hover !important;
