FRONT: StyledAutocomplete: accept property name in `getOptionLabel` and `isOptionEqualToValue`

--- a/frontend/src/components/uikit/inputs/dropdown/StyledAutocomplete.module.scss
+++ b/frontend/src/components/uikit/inputs/dropdown/StyledAutocomplete.module.scss
@@ -26,15 +26,7 @@
   cursor: pointer;
 }
 
-.option-value:hover {
-  background: $background-input-hover !important;
-}
-
-.option-value:focus {
-  background: $background-input-hover !important;
-}
-
-.option-value[aria-selected='true'] {
+.option-value:global(.Mui-focused) {
   background: $background-input-hover !important;
 }
 
