Multiselect: fix comparison for complex object

--- a/frontend/src/components/uikit/inputs/dropdown/StyledAutocomplete.module.scss
+++ b/frontend/src/components/uikit/inputs/dropdown/StyledAutocomplete.module.scss
@@ -92,6 +92,7 @@ input[aria-expanded='true'] + div .expand-icon {
   align-items: center;
   position: relative;
   @extend .option-value;
+  @extend .font-config;
 
   .headerText {
   }
