--- a/webapi/src/MccSoft.TemplateApp.App/wwwroot/css/identity.css
+++ b/webapi/src/MccSoft.TemplateApp.App/wwwroot/css/identity.css
@@ -168,7 +168,7 @@ form {
 .social-buttons-container {
   justify-content: flex-end;
   display: flex;
-  padding-right: 12px;
+  /*padding-right: 12px;*/
 }
 
 .text-danger{
