--- a/webapi/src/MccSoft.TemplateApp.App/Views/Shared/GeneralEmailTemplate.cshtml
+++ b/webapi/src/MccSoft.TemplateApp.App/Views/Shared/GeneralEmailTemplate.cshtml
@@ -123,7 +123,7 @@ table[class=body] .article {
                     <table role="presentation" border="0" cellpadding="0" cellspacing="0" style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%;" width="100%">
                         <tr>
                             <td class="content-block" style="font-family: sans-serif; vertical-align: top; padding-bottom: 10px; padding-top: 10px; color: #999999; font-size: 12px; text-align: center;" valign="top" align="center">
-                                <span class="apple-link" style="color: #999999; font-size: 12px; text-align: center;">&copy; TemplateApp @DateTime.Now.Year</span>
+                                <span class="apple-link" style="color: #999999; font-size: 12px; text-align: center;">&copy; TemplateApp @DateTime.UtcNow.Year</span>
                                 <br>
                             </td>
                         </tr>
