--- a/frontend/src/components/uikit/menu/AppMenu.module.scss
+++ b/frontend/src/components/uikit/menu/AppMenu.module.scss
@@ -1,4 +1,4 @@
-@import '../../../styles/variables';
+@use '../../../styles/variables' as *;
 .menuItem {
   padding: 8px 12px !important;
   line-height: 16px !important;
