--- a/frontend/src/components/uikit/table/AppTable.module.scss
+++ b/frontend/src/components/uikit/table/AppTable.module.scss
@@ -1,4 +1,4 @@
-@import '../../../styles/variables';
+@use '../../../styles/variables' as *;
 .sortable-column-header {
   cursor: pointer;
   user-select: none;
