--- a/frontend/src/pages/authorized/uikit/UiKitPage.module.scss
+++ b/frontend/src/pages/authorized/uikit/UiKitPage.module.scss
@@ -1,5 +1,5 @@
-@import 'src/styles/variables';
-@import 'src/styles/base';
+@use 'src/styles/variables' as *;
+@use 'src/styles/base' as *;
 .main {
   max-width: 300px;
   padding: 20px;
