--- a/frontend/src/components/uikit/inputs/Input.module.scss
+++ b/frontend/src/components/uikit/inputs/Input.module.scss
@@ -19,6 +19,10 @@
   position: relative;
 }
 
+.inputWithAdornmentWrapper {
+  position: relative;
+}
+
 .endAdornment {
   position: absolute;
   right: 8px;
