--- a/webapi/src/MccSoft.TemplateApp.App/Areas/Identity/Pages/Account/Login.cshtml
+++ b/webapi/src/MccSoft.TemplateApp.App/Areas/Identity/Pages/Account/Login.cshtml
@@ -25,7 +25,7 @@
       </div>
     </div>
 
-    <div class="login-container">
+    <div class="login-container" data-test-id="login-container">
       <form method="post">
 
         <div class="input-container" data-app-field="Login">
