--- a/webapi/src/MccSoft.TemplateApp.App/Areas/Identity/Pages/Account/Login.cshtml
+++ b/webapi/src/MccSoft.TemplateApp.App/Areas/Identity/Pages/Account/Login.cshtml
@@ -17,7 +17,7 @@
       <div class="main-background"></div>
       <div class="app-info">
         <span>
-          © 2016—<span>@DateTime.UtcNow.Year</span> MCC Soft GmbH + Co. KG
+          © 2016—<span>@DateTime.UtcNow.Year</span> MCC Software Engineering UG und Co. KG
         </span>
         <span>
           Server-Version: <span>@Assembly.GetEntryAssembly().GetName().Version.ToString(3)</span>
